# Offensive-Rust

./: README.md  cargo.toml
linux-Execute_Shellcode/mmap_exec_shellcode/: Cargo.toml
linux-Execute_Shellcode/mmap_exec_shellcode/src/: main.rs
linux-Execute_Shellcode/textattr_exec_shellcode/: Cargo.toml
linux-Execute_Shellcode/textattr_exec_shellcode/src/: main.rs
windows-Basic_Enum/: Cargo.toml
windows-Basic_Enum/src/: main.rs
windows-Memory_Buffer/: Cargo.toml
windows-Memory_Buffer/src/: main.rs
