[package]
name = "windows-Basic_Enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "z"
lto = true

[dependencies.windows]
version = "0.41.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
]