[package]
name = "windows-Memory_Buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "z"
lto = true

[dependencies.windows]
version = "0.41.0"
features = [
    "Foundation",
    "Win32_System_WinRT",
]